src/App.css
:root {
	--primary-text-color: #34333c;
	--secondary-text-color: #b4b4bb;
	--button-background-color: #2fced0;
	--button-background-color-hover: #1d9597;
	--button-text-color: #fffefe;
}

* {
	box-sizing: border-box;
	font-family: "Poppins";
	margin: 0;
}

.navbar,
.hero,
.statistics,
.boost-links,
.footer {
	padding: 0 10% 0 12%;
}
.navbar {
	margin-top: 54px;
	display: grid;
	align-items: center;
	grid-template-columns: 12% 63% 30%;
}
.navbar-logo {
	font-size: 32px;
	color: var(--primary-text-color);
	min-width: 120px;
}
.navbar-mobile {
	margin-top: 54px;
	display: grid;
	align-items: center;
	grid-template-columns: 40% 10%;
	column-gap: 50%;
	text-align: center;
}
.navbar-menu {
	transform: scale(1.5);
}
.navbar-menu:hover {
	cursor: pointer;
}
.navbar-buttons,
.navbar-links {
	display: flex;
	list-style: none;
	align-items: center;
}
.navbar-links {
	justify-content: left;
}

.navbar-links li {
	margin: 0 16px;
	display: flex;
	align-items: center;
}
.navbar-buttons li {
	display: flex;
	align-items: center;
}
.navbar-links a {
	text-decoration: none;
	color: var(--secondary-text-color);
	font-weight: 700;
	line-height: 1rem;
	font-size: 18px;
}
.navbar-login-button {
	background-color: transparent;
	color: var(--secondary-text-color);
	border: none;
	padding: 0.5em 1em;
	font-weight: 600;
	font-size: 18px;
	transition: color 0.1s ease-in-out;
	transition: background-color 0.3s ease-in-out;
	transform: translateX(31px);
	border-radius: 32px;
	padding-right: 92px;
	z-index: 0;
	position: relative;
}
.navbar-side-login-button {
	background-color: transparent;
	color: var(--secondary-text-color);
	border: none;
	padding: 0.5em 1em;
	font-weight: 600;
	font-size: 18px;
	transition: color 0.1s ease-in-out;
	transition: background-color 0.3s ease-in-out;
	border-radius: 32px;
	z-index: 0;
	position: relative;
	text-align: center;
}
.navbar-login-button:hover,
.navbar-side-login-button:hover {
	background-color: rgb(222, 222, 222);
	color: white;
	z-index: 0;
}
.navbar-signup-button,
.navbar-side-signup-button {
	background-color: var(--button-background-color);
	padding: 0.5em 1em;
	color: var(--button-text-color);
	border: none;
	border-radius: 32px;
	font-weight: 600;
	font-size: 18px;
	z-index: 1;
	position: relative;
}
.navbar-buttons {
	display: flex;
	justify-content: center;
}

.navbar-buttons button,
.navbar-side-buttons button {
	width: 120px;
}
.navbar-side-menu {
	position: absolute;
	top: 4rem;
	left: 60%;
	background-color: white;
	height: 100vh;
	width: 40%;
	z-index: 3;
	display: flex;
	flex-direction: column;
	gap: 2rem;
	text-align: center;
}
.navbar-close-menu {
	transform: scaleX(1.2) translateX(-12vw);
	cursor: pointer;
}
.navbar-side-links {
	list-style-type: none;
	display: flex;
	flex-direction: column;
	gap: 2rem;
	margin-bottom: 1rem;
}
.navbar-side-links a {
	color: var(--primary-text-color);
	text-decoration: none;
}

.navbar-side-buttons {
	list-style-type: none;
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
}
.hero {
	margin-top: 84.5px;
	display: flex;
	align-items: center;
}
.hero-left {
	width: 50%;
	flex-shrink: 0;
}
.hero-mobile {
	overflow: hidden;
	display: flex;
	flex-direction: column;
	align-items: center;
	margin-top: 5rem;
}
.hero-right {
	max-width: 733px;
	min-width: 50%;
	flex-shrink: 0;
}
.hero-image {
	display: block;
	width: 100% !important;
	transform: translateX(12vw);
}

.hero-title {
	font-size: 3.7rem;
	color: var(--primary-text-color);
	line-height: 3.9rem;
	margin-top: -32px;
}
.hero-mobile > .hero-title {
	font-size: 48px;
	text-align: center;
	margin: 2rem auto;
	line-height: 54px;
}
.hero-text {
	margin-top: 31px;
	color: var(--secondary-text-color);
	font-size: 1.5rem;
	font-weight: 500;
}
.hero-mobile > .hero-text {
	margin: 0 auto;
	width: 85%;
	text-align: center;
	font-size: 20px;
	line-height: 32px;
	font-weight: 600;
}
.hero-get-started-button {
	background-color: var(--button-background-color);
	font-size: 20px;
	border-radius: 32px;
	padding: 8px 16px;
	border: none;
	color: var(--button-text-color);
	font-weight: 500;
	margin-top: 46px;
	width: 220px;
	max-width: 220px;
	min-height: 65px;
}
.hero-mobile > .hero-get-started-button {
	margin: 2rem auto;
	text-align: center;
}
.shortner,
.shortner-mobile {
	background-image: url(./assets/bg-shorten-desktop.svg);
	background-color: #3a3053;
	width: 78%;
	max-width: 1200px;
	margin: 0 10% 0 12%;
	min-height: 150px;
	max-height: 175px;
	justify-content: center;
	display: flex;
	align-items: center;
	border-radius: 12px;
	transform: translateY(8vw);
	padding: 1.5rem 0.5rem;
}

.shortner-mobile {
	transform: translateY(90px);
}
.shortner form,
.shortner-mobile form {
	width: 90%;
	display: flex;
	justify-content: space-between;
}
.shortner-mobile > form {
	flex-direction: column;
	gap: 1rem;
	align-items: center;
}
.shortner-url {
	width: 82%;
	font-size: 18px;
	padding-left: 2.5%;
	font-weight: 500;
	min-height: 58px;
	border-radius: 8px;
}
.shortner-button {
	width: 15%;
	min-height: 54px;
	border: none;
	border-radius: 8px;
	font-size: 18px;
	font-weight: 500;
	color: var(--button-text-color);
	background-color: var(--button-background-color);
}
.shortner-mobile .shortner-button,
.shortner-mobile .shortner-url {
	width: 95%;
}

.statistics,
.statistics-mobile {
	margin-top: 3vw;
	padding-top: 180px;
	text-align: center;
	background-color: #f1f1f7;
}
.statistics-mobile {
	display: flex;
	flex-direction: column;
	align-items: center;
	padding-left: 2rem;
	padding-right: 2rem;
	overflow: hidden;
}
.statistics-title,
.statistics-mobile > .statistics-title {
	color: var(--primary-text-color);
	font-weight: 700;
	font-size: 48px;
}
.statistics-mobile > .statistics-title {
	font-size: 32px;
}
.statistics-text {
	color: var(--secondary-text-color);
	font-size: 20px;
	width: 50%;
	text-align: center;
	margin: 10px auto;
	font-weight: 500;
}
.statistics-mobile > .statistics-text {
	width: 100%;
	font-size: 18px;
	margin-top: 1.5rem;
}
.statistic-card {
	background-color: #fffefe;
	margin: 16px;
	width: 400px;
	height: fit-content;
	min-height: 350px;
	border-radius: 8px;
	padding: 32px;
	text-align: left;
	z-index: 1;
}
.statistic-icon {
	border-radius: 50%;
	background-color: #3e2e55;
	width: 100px;
	max-height: 100px;
	justify-content: center;
	align-items: center;
	display: flex;
	transform: translateY(-72px);
}
.statistic-card-title {
	color: var(--primary-text-color);
	font-size: 24px;
	font-weight: 700;
	margin-top: -32px;
}
.statistic-card-text {
	color: var(--secondary-text-color);
	font-size: 18px;
	font-weight: 500;
	margin-top: 16px;
}
.statistic-cards {
	display: flex;
	margin-top: 64px;
	padding-bottom: 120px;
}
.statistics-mobile > .statistic-cards {
	display: flex;
	flex-direction: column;
	gap: 5rem;
}
.statistics-mobile > .statistic-cards > .statistic-card {
	text-align: center;
	transform: scale(0.9);
	margin: 0;
}
.statistics-mobile > .statistic-cards > .statistic-card > .statistic-icon {
	margin: auto;
}
.statistics-line {
	max-height: 10px;
	background-color: var(--button-background-color);
	width: 78%;
	max-width: 1200px;
	z-index: 0;
	height: 1vw;
	margin-left: 32px;
	transform: translateY(-368.64px);
	position: relative;
}
.statistics-mobile > .statistics-line {
	margin: 0 auto;
	transform: rotate(90deg) translateX(-800px);
	margin: 0;
	height: 10px;
	width: 800px;
}
.detailed-records {
	margin-top: 80px;
}
.fully-customizable {
	margin-top: 160px;
}
.boost-links,
.boost-links-mobile {
	background-image: url(./assets/bg-boost-desktop.svg);
	background-color: #3a3053;
	min-height: 250px;
	justify-content: center;
	align-items: center;
	color: var(--button-text-color);
	font-size: 32px;
	font-weight: 700;
	display: flex;
}
.boost-links-mobile {
	font-size: 20px;
	text-align: center;
}
.boost-links-button {
	background-color: var(--button-background-color);
	border: none;
	height: 54px;
	width: 200px;
	border-radius: 32px;
	color: var(--button-text-color);
	font-size: 20px;
	font-weight: 500;
	margin-top: 24px;
	transition: background-color 0.3s ease-in;
}
.boost-links-button,
.shortner-button,
.hero-get-started-button,
.navbar-signup-button {
	transition: background-color 0.3s ease-in;
}
.boost-links-button:hover,
.shortner-button:hover,
.hero-get-started-button:hover,
.navbar-signup-button:hover,
.copy-button:hover,
.navbar-side-signup-button:hover {
	background-color: var(--button-background-color-hover);
}
.boost-links-content {
	text-align: center;
}
.footer ul,
.footer-mobile ul {
	padding: 0 20px 0 40px;
}
.footer,
.footer-mobile {
	background-color: #222127;
	color: var(--button-text-color);
	display: flex;
	justify-content: space-between;
	padding-top: 64px;
	font-size: 18px;
	font-weight: 500;
	width: 100%;
}
.footer-mobile {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 4rem;
	text-align: center;
	padding-bottom: 2rem;
}
.footer-logo {
	font-size: 32px;
	font-weight: 700;
}
.footer a,
.footer-mobile a {
	color: var(--secondary-text-color);
	text-decoration: none;
}
.footer li,
.footer-mobile li {
	list-style: none;
}
.footer-links {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	margin-left: 62px;
}

.footer-mobile .footer-links {
	flex-direction: column;
	gap: 2rem;
	margin-left: 0;
}
.footer-socials {
	display: flex;
	justify-content: space-between;
	font-size: 30px;
	width: 184px;
}
.footer-socials a {
	color: var(--button-text-color);
}
.links {
	margin: 22px 0;
}
.links ul {
	padding: 0;
}
.links li {
	margin: 10px 0;
}
a:hover {
	text-decoration: underline;
}
button {
	cursor: pointer;
}
.shortened-urls {
	width: 100%;
}
.shortened-url {
	display: flex;
	justify-content: space-between;
	align-items: center;
	height: 86px;
	border: 1px solid rgba(0, 0, 0, 0.1);
	border-radius: 16px;
	padding: 16px;
	background-color: var(--button-text-color);
	font-size: 18px;
	margin-bottom: 24px;
}
.statistics-mobile .shortened-url {
	font-size: 16px;
}
.statistics-mobile .copy-button {
	transform: scale(0.75);
	width: 120px;
}

.copy-button {
	background-color: var(--button-background-color);
	font-size: 20px;
	border-radius: 12px;
	padding: 8px 16px;
	border: none;
	color: var(--button-text-color);
	font-weight: 500;
	width: 156px;
	height: 54px;
	transition: background-color 0.3s ease-in-out;
}
.clear-urls {
	display: flex;
	justify-content: right;
	margin-bottom: 2rem;
}
.clear-urls button {
	background-color: red;
	color: white;
	border: 0;
	padding: 10px 20px;
	border-radius: 8px;
	font-size: 20px;
}

